[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commonhuman-core"
version = "0.1.2"
description = "Shared HTTP, crawling, and scanning infrastructure for CommonHuman-Lab tools"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
  { name = "CommonHuman-Lab" },
]
keywords = ["security", "scanner", "http", "crawler", "pentest"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "requests>=2.28.0",
  "urllib3>=1.26.0",
]

[project.optional-dependencies]
browser   = ["selenium>=4.0"]
openapi   = ["pyyaml>=6.0"]
websocket = ["websocket-client>=1.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.0",
  "ruff>=0.4",
  "types-requests",
]

[project.urls]
Homepage = "https://github.com/commonhuman-lab/commonhuman-core"
Issues   = "https://github.com/commonhuman-lab/commonhuman-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/commonhuman_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["src/commonhuman_core"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under   = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
